<resources>
    <string name="app_name">FIX IT</string>
    <string name="confermapsw">Conferma Password</string>
    <string name="confermareg">INVIA</string>
    <string name="email">e-Mail</string>
    <string name="backToLogin">Torna alla schermata di login</string>
    <string name="registrazione">Registrazione</string>
    <string name="logout">LOGOUT</string>
    <string name="verify">Verify</string>
    <string name="email_non_verificata">Email non verificata</string>
    <string name="invia_segnalazione">Invio segnalazione</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="navi">Close</string>
    <string name="ultime_notizie">Ultime notizie</string>
    <string name="stato_segnalazione">Stato segnalazioni</string>
    <string name="statistiche_zona">Statistiche zona</string>
    <string name="statistiche">Statistiche</string>
    <string name="gestione_segnalazioni">Gestione segnalazioni</string>
    <string name="login_impiegato">Login Impiegato</string>
    <string name="lavori_per_noi">Lavori per noi?</string>
    <string name="password_dimenticata">Password dimenticata ?</string>
    <string name="login">Login</string>
    <string name="codice_fiscale">Codice Fiscale</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="territorio">Territorio</string>
    <string name="tipologia_segnalazione">Tipologia Segnalazione</string>
    <string name="social">Social</string>
    <string name="descrizione_della_problematica">Descrizione della problematica</string>
    <string name="oggetto">Oggetto</string>
    <string name="data">Data</string>
    <string name="orario">Orario</string>
    <string name="posizione">Posizione</string>
    <string name="allegato">Allegato</string>
    <string name="missing_object">Missing_Object</string>
    <string name="missing_description">Missing_Description</string>
    <string name="missing_date">Missing Date</string>
    <string name="l_e_mail_non_verificata">L\'e-mail non è verificata</string>
    <string name="resend">RESEND</string>
    <string name="nome">Nome</string>
    <string name="nullStr">null</string>
    <string name="e_mail">e-mail</string>
    <string name="null_invalid_ptr">null@invalid.ptr</string>
    <string name="tipo">Tipologia</string>
    <string name="invalid">invalid</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="pannello_di_controllo">Pannello di controllo</string>
    <string name="blank" />
    <string name="segnalazioni">Segnalazioni</string>
    <string name="profile">Profile</string>
    <string name="logout_nav">Logout</string>
    <string name="stato_segnalazioni">Stato segnalazioni</string>
    <string name="segnalazioni_aperte">Segnalazioni aperte</string>
    <string name="segnalazioni_chiuse">Segnalazioni chiuse</string>
    <string name="tools">Tools</string>
    <string name="missing_id">Missing_ID</string>
    <string name="vote">Vote</string>
    <string name="missing_desc">Missing_desc</string>
    <string name="scrivi_qualcosa">Scrivi qualcosa...</string>
    <string name="invia">INVIA</string>
    <string name="date">date</string>
    <string name="inserisci_la_motivazione_per_la_riapertura">Inserisci la motivazione per la riapertura (è possibile effettaure una sola richiesta di riapertura).</string>
    <string name="richiedi_riapertura_segnalazione">Richiedi riapertura segnalazione</string>
    <string name="la_segnalazione_stata_risolta_in_maniera_soddisfacente">La segnalazione è stata risolta in maniera soddisfacente?</string>
    <string name="invia_voto">Invia voto</string>
    <string name="grazie_per_averci_fornito_il_tuo_feedback">Grazie per averci fornito il tuo feedback!</string>
    <string name="localit">Località</string>
    <string name="inserisci_localit">Inserisci località</string>
    <string name="pending_list">Pending List</string>
    <string name="aperte">Aperte</string>
    <string name="chiuse">Chiuse</string>
    <string name="carica_segnalazioni">Carica Segnalazioni</string>
    <string name="others">Others</string>
    <string name="fix_it">FIX-IT</string>
    <string name="edit">Edit</string>
    <string name="apri_nsegnalazione">Apri\nSegnalazione</string>
    <string name="undefined">Undefined</string>
    <string name="carica_immagine_del_profilo">Immagine del profilo</string>
    <string name="cognome">Cognome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="usernameRegex">^[a-zA-Z0-9][a-zA-Z0-9_]{8,20}$</string>
    <string name="fullnameRegex">^[a-zA-Z]+(([\\\'\\,\\.\\- ][a-zA-Z ])?[a-zA-Z]*)*$</string>
    <string name="surnameRegex">^[a-zA-Z]+(([\\\'\\,\\.\\- ][a-zA-Z ])?[a-zA-Z]*)*$</string>
    <string name="fiscalcodeRegex">^[A-Z]{6}[A-Z0-9]{2}[A-Z][A-Z0-9]{2}[A-Z][A-Z0-9]{3}[A-Z]$</string>
    <string name="emailRegex"><![CDATA[^[a-zA-Z0-9.!#$%&\'*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$]]></string>
    <string name="passowrdRegex">^(?=.*\\d).{6,15}$</string>
    <string name="signup">Signup</string>
    <string name="sign_in">Sign in</string>
    <string name="registrati">Registrati</string>
    <string name="log_in">Log in</string>
    <string name="it_s_a_hammer">It\'s a hammer</string>
    <string name="la_tua_foto_profilo">La tua foto profilo</string>
    <string name="segnalazione">SEGNALAZIONE</string>
    <string name="ultime_notizie_caps">ULTIME NOTIZIE</string>
    <string name="segnalazioni_aperte_caps">SEGNALAZIONI APERTE</string>
    <string name="segnalazioni_chiuse_caps">SEGNALAZIONI CHIUSE</string>
    <string name="riapri_nsegnalazione">Riapri\nSegnalazione</string>
    <string name="registrazione_caps">REGISTRAZIONE</string>
    <string name="dashboard_caps">DASHBOARD</string>
</resources>