<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
    </group>

    <item
        android:id="@+id/nav_imp_panel"
        android:title="@string/others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_imp_statistiche"
                    android:icon="@drawable/ic_stats"
                    android:title="@string/statistiche" />
            </group>
        </menu>
    </item>

    <item android:title="@string/blank">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout_nav" />
            </group>
        </menu>
    </item>

</menu>