<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="Profile" />
    </group>

    <item
        android:id="@+id/nav_menu_user"
        android:title="Segnalazioni">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_sendReport"
                    android:icon="@drawable/ic_report"
                    android:title="@string/invia_segnalazione" />
                <item
                    android:id="@+id/nav_statoReport"
                    android:icon="@drawable/ic_status"
                    android:title="@string/stato_segnalazione" />
                <item
                    android:id="@+id/nav_statsreport"
                    android:icon="@drawable/ic_stats"
                    android:title="@string/statistiche_zona" />
                <item
                    android:id="@+id/nav_mapReports"
                    android:icon="@drawable/ic_map"
                    android:title="@string/territorio" />
                <item
                    android:id="@+id/nav_news"
                    android:icon="@drawable/ic_news"
                    android:title="@string/ultime_notizie" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/nav_imp_panel"
        android:title="Pannello di controllo">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_load_report"
                    android:icon="@drawable/ic_imp_segnalazione"
                    android:title="@string/invia_segnalazione" />
                <item
                    android:id="@+id/nav_imp_statistiche"
                    android:icon="@drawable/ic_stats"
                    android:title="@string/statistiche" />
                <item
                    android:id="@+id/nav_imp_report"
                    android:icon="@drawable/ic_gestione_segnalazioni"
                    android:title="@string/gestione_segnalazioni" />
            </group>
        </menu>
    </item>

    <item android:title=" ">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="Logout" />
            </group>

        </menu>
    </item>

</menu>