<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.application.fix_it_pagliuca.user.dashboard.Dashboard"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu_user" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff7f8"
        android:fitsSystemWindows="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/emailNotVerified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/profileImg"
            android:layout_alignLeft="@id/profileImg"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/l_e_mail_non_verificata"
            android:textColor="#c91e12"
            android:visibility="invisible" />

        <Button
            android:id="@+id/resendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/emailNotVerified"
            android:layout_alignLeft="@id/emailNotVerified"
            android:layout_marginStart="155dp"
            android:layout_marginLeft="155dp"
            android:layout_marginTop="10dp"
            android:text="@string/resend"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/la_tua_foto_profilo" />

        <TextView
            android:id="@+id/nomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/profileImg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="210dp"
            android:text="@string/nome"
            android:textColor="#808080" />

        <TextView
            android:id="@+id/nomeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nomeText"
            android:layout_centerHorizontal="true"
            android:text="@string/nullStr"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nomeUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/e_mail"
            android:textColor="#808080" />

        <TextView
            android:id="@+id/emailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailText"
            android:layout_centerHorizontal="true"
            android:text="@string/null_invalid_ptr"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/roleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/tipo"
            android:textColor="#808080" />

        <TextView
            android:id="@+id/roleUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/roleText"
            android:layout_centerHorizontal="true"
            android:text="@string/invalid"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/fiscalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/roleText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/codice_fiscale"
            android:textColor="#808080" />

        <TextView
            android:id="@+id/fiscalUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fiscalText"
            android:layout_centerHorizontal="true"
            android:text="@string/invalid"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/birthdayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fiscalUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/data_di_nascita"
            android:textColor="#808080" />

        <TextView
            android:id="@+id/birthdayUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/birthdayText"
            android:layout_centerHorizontal="true"
            android:text="@string/dd_mm_yyyy"
            android:textColor="#000000" />

    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>