<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="3dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="3dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/bg_oreport"
    android:orientation="vertical">

    <TextView
        android:id="@+id/repObject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/missing_object"
        android:textColor="#ff5e5e"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/repID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missing_id"
        android:textColor="#396b99"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="@+id/repObject"
        app:layout_constraintTop_toBottomOf="@+id/repObject" />

    <TextView
        android:id="@+id/repDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/missing_date"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownIdInLayout" />

    <TextView
        android:id="@+id/repDesc"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/missing_desc"
        app:layout_constraintLeft_toLeftOf="@id/repID"
        app:layout_constraintTop_toBottomOf="@id/repID" />

    <TextView
        android:id="@+id/repType"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/undefined"
        app:layout_constraintLeft_toLeftOf="@id/repID"
        app:layout_constraintTop_toBottomOf="@id/repDesc"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/repVote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginLeft="260dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/vote"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repDate" />

    <Button
        android:id="@+id/repReopen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginLeft="260dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/riapri_nsegnalazione"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repVote" />

</androidx.constraintlayout.widget.ConstraintLayout>