<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/registrazioneText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrazione"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="94dp" />

    <EditText
        android:id="@+id/nomeRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Nome"
        android:layout_below="@id/registrazioneText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="191dp" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="e-Mail"
        android:layout_below="@id/nomeRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="265dp" />

    <EditText
        android:id="@+id/pswRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:ems="10"
        android:layout_below="@id/emailRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="343dp" />

    <EditText
        android:id="@+id/confirmPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/pswRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/confermapsw"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="414dp" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confermareg"
        android:layout_below="@id/confirmPsw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="514dp" />

    <Button
        android:id="@+id/signinActBtn"
        android:layout_below="@id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:layout_marginTop="20dp" />


</RelativeLayout>